# flatpak-build-helper

./: .gitmodules  Cargo.toml  README.md  build.rs
src/: addon.rs  constants.rs  main.rs  manifest.rs  util.rs
src/flatpak/: parse.rs  types.rs
