[package]
name = "flatpak-build-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.1", features = ["derive"] }
dirs = "5.0.1"
libc = "0.2.147"
num_cpus = "1.16.0"
racros = { path = "./racros" }
regex = "1.9.5"
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.105"
